# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh,
  targets/support/chroot-functions.sh:
  Remove the die on LIBDIR check, since it won't be set on non-multilib
  profiles. We can now run debug in preclean again.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Let's not try to chmod a dangling symlink.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added emerge --info to debug output.  I don't know why I didn't add it before.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/stage4/stage4-preclean-chroot.sh:
  We probably shouldn't be running our debug functions in our stages. Let's
  fix this.

  24 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Added a get_libdir call and fail if we don't have a valid LIBDIR when using
  debug.

  23 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Only copy the handbook icon if one exists.

  21 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_lock.py:
  Fix a small typo. Thanks to Justin Bronder <jsbronder@gentoo.org> for
  pointing it out.

  17 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  We should be matching all possible LIBDIRs, so make sure we do that.

  17 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  We no longer need the metadata.tar.bz2, since the Installer uses
  metadata_overlay.
